--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <button id="power-saving-on">PSM on</button>
       <button id="power-saving-off">PSM off</button>
     </div>
-    <script type="text/javascript" src="src/Thermostat.js"></script>
-    <script type="text/javascript" src="src/interface.js"></script>
+    <script type="text/javascript" src="public/javascript/src/Thermostat.js"></script>
+    <script type="text/javascript" src="public/javascript/src/interface.js"></script>
   </body>
 </html>
