--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Thermostat Exemplar</title>
-    <link rel="stylesheet" href="public/css/stylesheet.css" type="text/css"/>
+    <link rel="stylesheet" href="css/stylesheet.css" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
   </head>
@@ -19,7 +19,7 @@
       <button id="power-saving-on">PSM on</button>
       <button id="power-saving-off">PSM off</button>
     </div>
-    <script type="text/javascript" src="public/javascript/src/Thermostat.js"></script>
-    <script type="text/javascript" src="public/javascript/src/interface.js"></script>
+    <script type="text/javascript" src="javascript/src/Thermostat.js"></script>
+    <script type="text/javascript" src="javascript/src/interface.js"></script>
   </body>
 </html>
